fix: added full access api key support
